--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -315,13 +315,12 @@ Microsoft:
     - regex: 'Microsoft; Lumia ([^;/)]+)(?:[;/)]|$)'
       model: 'Lumia $1'
 
-# NOKIA
+# NOKIA (www.nokia.com)
 Nokia:
   regex: 'Nokia(?!Browser|Webview|; GT-I8750)|Lumia|Maemo RX|portalmmm/2\.0 N7|portalmmm/2\.0 NK|nok[0-9]+|Symbian.*\s([a-z0-9]+)$|RX-51 N900|TA-[0-9]{4}|ARM; 909'
   device: 'smartphone'
   models:
     # Nokia branded phones by HMD Global
-    # 2017 Models
     - regex: 'TA-10(07|23|29|35)'
       model: '2'
     - regex: 'TA-10(20|28|32|38)'
@@ -334,35 +333,24 @@ Nokia:
       model: '7'
     - regex: 'TA-10(04|12|52)'
       model: '8'
-    # 2018 Models
-    - regex: 'Nokia 8\.1'
-      model: '8.1'
     - regex: 'Nokia 8 Sirocco'
       model: '8 Sirocco'
-    - regex: 'Nokia 7\.1'
-      model: '7.1'
     - regex: 'Nokia 7 plus'
       model: '7 plus'
     - regex: 'Nokia 6\.1 Plus'
       model: '6.1 Plus'
-    - regex: 'Nokia 6\.1'
-      model: '6.1'
     - regex: 'Nokia 5\.1 Plus'
       model: '5.1 Plus'
-    - regex: 'Nokia 5\.1'
-      model: '5.1'
     - regex: 'Nokia 3\.1 Plus'
       model: '3.1 Plus'
-    - regex: 'Nokia 3\.1'
-      model: '3.1'
-    - regex: 'Nokia 2\.1'
-      model: '2.1'
     - regex: 'Nokia 1 Plus'
       model: '1 Plus'
-    - regex: 'Nokia 1'
-      model: '1'
+    - regex: 'Nokia 2 V(?:[);/ ]|$)'
+      model: '2 V Tella'
 
     # Nokia phones
+    - regex: 'Nokia ?X2DS'
+      model: 'X2 Dual'
     - regex: 'RX-51 N900'
       model: 'N900'
     - regex: '(?: )?(Nokia500|nokiaasha500(?:dualsim)?)(?: Build|[_);/])'
@@ -3022,7 +3010,7 @@ Blackview:
       model: 'R6 Lite'
     - regex: 'BV9000Pro-F'
       model: 'BV9000 Pro F'
-    - regex: '(BL6000|BV(?:[48]000|5[58]00|9[05678]00|6[38]00))Pro'
+    - regex: '(BL6000|BV(?:[0-9]+))Pro'
       model: '$1 Pro'
     - regex: 'Blackview (A[78]|E7S)'
       model: '$1'
@@ -3163,7 +3151,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16])(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16]|V2058)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3326,6 +3314,8 @@ Vivo:
       model: 'X60 Pro Plus'
     - regex: 'X9Plus(?:[);/ ]|$)'
       model: 'X9 Plus'
+    - regex: 'vivo 2015(?:[);/ ]|$)'
+      model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
     - regex: 'vivo 1906(?:[);/ ]|$)'
@@ -3382,6 +3372,8 @@ Vivo:
       model: 'Y53i'
     - regex: 'vivo 1606a(?:[);/ ]|$)'
       model: 'Y53'
+    - regex: 'V2058(?:[);/ ]|$)'
+      model: 'Y53s'
     - regex: 'vivo 1603(?:[);/ ]|$)'
       model: 'Y55l'
     - regex: 'vivo 1610(?:[);/ ]|$)'
@@ -5069,6 +5061,12 @@ Digma:
       device: 'tablet'
     - regex: 'TT7024MG'
       model: 'Optima 7.4" 3G'
+      device: 'tablet'
+    - regex: 'Optima ([0-9]+ X70[0-9]+) 4G'
+      model: 'Optima $1 4G'
+      device: 'tablet'
+    - regex: 'Optima ([0-9]+ A500S) 3G'
+      model: 'Optima $1 3G'
       device: 'tablet'
     - regex: '((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.STNM]+|Prime)(?:[ _][43]G)?)'
       model: '$1'
@@ -9803,6 +9801,9 @@ Lenovo:
       model: 'IdeaPad $1'
       device: 'tablet'
 
+    - regex: 'Lenovo K12 Pro'
+      model: 'K12 Pro'
+
     - regex: 'VR-1541F'  # VR headset
       device: 'wearable'
       model: 'Mirage Solo'
@@ -10089,6 +10090,8 @@ LG:
       model: 'Q9'
     - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
       model: 'Q70'
+    - regex: 'LM-Q520N(?:[);/ ]|$)'
+      model: 'Q52'
     - regex: 'LGV33(?:[);/ ]|$)'
       model: 'Qua Phone PX'
     - regex: 'L-03K(?:[);/ ]|$)'
@@ -11496,19 +11499,15 @@ Motorola:
       model: 'Moto E3 Power'
     - regex: '(?:MOT-|Motorola-)?XT1924-9'
       model: 'Moto E5 Plus'
-    - regex: 'moto e\(?([57])\) plus'
+    - regex: 'moto e\(?([0-9])\)? plus'
       model: 'Moto E$1 Plus'
-    - regex: 'Moto E5 Play'
-      model: 'Moto E5 Play'
+    - regex: 'Moto E([0-9]) Play'
+      model: 'Moto E$1 Play'
     - regex: 'Moto E5 go(?:[);/ ]|$)'
       model: 'Moto E5 Go'
-    - regex: 'Moto E6 Play(?:[);/ ]|$)'
-      model: 'Moto E6 Play'
-    - regex: 'moto E\(([0-9])\) plus'
-      model: 'Moto E$1 Plus'
-    - regex: 'Moto E\(?([67])\)?(?:[);/ ]|$)'
+    - regex: 'Moto E\(?([567])\)?(?:[);/ ]|$)'
       model: 'Moto E$1'
-    - regex: 'Moto E\(?([67])s\)?(?:[);/ ]|$)'
+    - regex: 'Moto E\(?([567])s\)?(?:[);/ ]|$)'
       model: 'Moto E$1s'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
@@ -11604,6 +11603,10 @@ Motorola:
       model: 'Moto G Power'
     - regex: 'moto g pro'
       model: 'Moto G Pro'
+    - regex: 'moto g fast'
+      model: 'Moto G Fast'
+    - regex: 'moto g 5G'
+      model: 'Moto G 5G'
     - regex: 'moto g\(([0-9])\) power lite'
       model: 'Moto G$1 Power Lite'
     - regex: 'moto g\(([0-9])\) power'
@@ -12584,7 +12587,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|91|71)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|71)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12673,6 +12676,8 @@ Realme:
       model: 'C21Y'
     - regex: 'RMX3191'
       model: 'C25'
+    - regex: 'RMX3195'
+      model: 'C25s'
     - regex: 'RMX3231'
       model: 'C11 (2021)'
     - regex: 'RMX3031(?:[);/ ]|$)'
@@ -14688,6 +14693,8 @@ Samsung:
       model: 'Galaxy M30'
     - regex: '(?:SAMSUNG-)?SM-M315F'
       model: 'Galaxy M31'
+    - regex: '(?:SAMSUNG-)?SM-M325F'
+      model: 'Galaxy M32'
     - regex: '(?:SAMSUNG-)?SM-M317F'
       model: 'Galaxy M31s'
     - regex: '(?:SAMSUNG-)?SM-M405'
@@ -16530,7 +16537,7 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6n(?:[);/ ]|$)'
+    - regex: 'TECNO[ _]KF6[nm](?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
