--- a/Tests/fixtures/smartphone-8.yml
+++ b/Tests/fixtures/smartphone-8.yml
@@ -9560,3 +9560,40 @@
     model: Style R407
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Cumulus_6_HD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Lark
+    model: Cumulus 6 HD
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 5.1; Philips_S326) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.216 YaBrowser/21.5.1.107.00 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.5.1.107.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Philips
+    model: S326
+  os_family: Android
+  browser_family: Unknown
+
